--- a/jxhsjxhs.github.io/themes/3-hexo/_config.yml
+++ b/jxhsjxhs.github.io/themes/3-hexo/_config.yml
@@ -24,8 +24,8 @@ link:
     csdn:
     oschina: https://my.oschina.net/yelog
     juejin:
-    email: jaytp@qq.com
-    qq: 872336115
+    email: jame_xhs@163.com
+    qq: 360792760
     kugou: https://www.kugou.com/
     neteasemusic: https://music.163.com/#/user/home?id=88151013
 
@@ -53,9 +53,9 @@ category:
 
 # 左下角自定义菜单
 menu:
-  about:  # '关于' 按钮
+  about: # '关于' 按钮
     on: true # 是否显示
-    url: /about  # 跳转链接
+    url: /about # 跳转链接
     type: 1 # 跳转类型 1：站内异步跳转 2：当前页面跳转 3：打开新的tab页
   friend: # '友链' 按钮
     on: true # 是否展示
@@ -63,24 +63,24 @@ menu:
     相册:
       on: false
       url: /photo
-      type: 1  # 跳转类型 1：站内异步跳转
+      type: 1 # 跳转类型 1：站内异步跳转
     叶落阁:
       on: false
       url: http://yelog.org/
-      type: 2  # 跳转类型 2：当前页面跳转
+      type: 2 # 跳转类型 2：当前页面跳转
     github:
       on: false
       url: https://github.com/yelog
-      type: 3  # 跳转类型 3：打开新的tab页
+      type: 3 # 跳转类型 3：打开新的tab页
 
 # 文末声明
 article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
 
-bottom_text: ©2016-2019 Yelog
+bottom_text: ©2016-2019 jame_xhs
 # 自定义页面最下方的站点版权信息
 # 如果不填，则自定义为 ©2017 author (这个author为hexo根目录_config.yml中配置的)
 
-reward: true
+reward: false
 # true 开启打赏功能
 
 searchAll: false
@@ -92,14 +92,12 @@ searchAll: false
 #   path: search.xml
 #   field: post
 
-
 copyright: true
 # Copyright info. of post | 文末版权信息
 
 word_count: false
 # true 开启字数统计
 # 开启此功能需要安装插件 ：在 hexo根目录 执行npm i hexo-wordcount --save
-
 
 # 不蒜子网站计数设置
 # http://ibruce.info/2015/04/04/busuanzi/
@@ -111,15 +109,15 @@ visit_counter:
 ##########自定义样式设置##############
 # Table of contents | 文章目录
 toc:
-  max_depth: 3  # 1 - 6 (h1-h6) 目录最大级数
+  max_depth: 3 # 1 - 6 (h1-h6) 目录最大级数
 
 #文章列表 鼠标移上去的样式, 为空时使用默认效果
 article_list:
-  title: '#383636' # 文章列表标题颜色
-  datetime: '#5e5e5f' # 文章发布日期颜色
+  title: "#383636" # 文章列表标题颜色
+  datetime: "#5e5e5f" # 文章发布日期颜色
   hover:
-    background: '#e2e0e0'  # 背景色:提供几种：'#c1bfc1'  '#fbf4a8'
-    color:     # 文字颜色 提供几种：'#ffffff'
+    background: "#e2e0e0" # 背景色:提供几种：'#c1bfc1'  '#fbf4a8'
+    color: # 文字颜色 提供几种：'#ffffff'
 # 注意：由于颜色如果包含#，使用单引号 ' 引起来
 
 # 文章列表背景图
@@ -199,9 +197,9 @@ friends:
 ##########评论设置#############
 comment:
   on: false
-  type: gitalk  # 评论系统：gitalk、disqus、gentie、gitment,注意：使用时，在下方对应位置进行配置
-  comment_count: true  # 文章标题下方显示评论数
-  preload_comment: false  # 预加载评论区
+  type: gitalk # 评论系统：gitalk、disqus、gentie、gitment,注意：使用时，在下方对应位置进行配置
+  comment_count: true # 文章标题下方显示评论数
+  preload_comment: false # 预加载评论区
   ## false: 当点击评论条等区域时再加载评论模块
   ## true: 页面加载时加载评论区
 # 各评论系统配置 ↓↓
@@ -218,11 +216,11 @@ gentie:
   # 网易云跟帖暂时不支持查询评论数，所以启用时，把评论数关掉，上方comment_count: false。
 
 gitalk:
-  githubID: yelog
-  repo: yelog.github.io
+  githubID: jxhsjxhs
+  repo: jxhsjxhs.github.io
   ClientID:
   ClientSecret:
-  adminUser: yelog
+  adminUser: jxhsjxhs
   distractionFreeMode: true
   language: zh-CN
   perPage: 10
@@ -237,10 +235,9 @@ gitalk:
 # language: 语言：支持：en / zh-CN / zh-TW 三种
 # perPage: 每次加载的数据大小，默认10，最大100
 
-
 gitment:
-  owner: yelog
-  repo: yelog.github.io
+  owner: jxhsjxhs
+  repo: jxhsjxhs.github.io
   client_id:
   client_secret:
   # gitment : 通过github issue实现的评论系统
