--- a/jxhsjxhs.github.io/themes/3-hexo/_config.yml
+++ b/jxhsjxhs.github.io/themes/3-hexo/_config.yml
@@ -12,21 +12,9 @@ link:
   theme: color # 链接样式，color: 彩色图标  white: 黑白图标
   items:
     rss: /atom.xml
-    github: https://github.com/yelog
-    facebook: https://www.facebook.com/faker.tops
-    twitter:
-    linkedin:
-    instagram: https://www.facebook.com/faker.tops
-    reddit: https://www.reddit.com/user/yelog/
-    weibo: http://weibo.com/u/2307534817
-    jianshu: https://www.jianshu.com/u/ff56736de7cf
-    zhihu: https://www.zhihu.com/people/jaytp/activities
-    csdn:
-    oschina: https://my.oschina.net/yelog
-    juejin:
+    github: https://github.com/jxhsjxhs
     email: jame_xhs@163.com
     qq: 360792760
-    kugou: https://www.kugou.com/
     neteasemusic: https://music.163.com/#/user/home?id=88151013
 
 ##########多作者模式############
@@ -66,15 +54,15 @@ menu:
       type: 1 # 跳转类型 1：站内异步跳转
     叶落阁:
       on: false
-      url: http://yelog.org/
+      url: http://www.jxhs.me/
       type: 2 # 跳转类型 2：当前页面跳转
     github:
       on: false
-      url: https://github.com/yelog
+      url: https://github.com/jxhsjxhs
       type: 3 # 跳转类型 3：打开新的tab页
 
 # 文末声明
-article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jaytp@qq.com
+article_txt: 转载请注明来源，欢迎对文章中的引用来源进行考证，欢迎指出任何有错误或不够清晰的表达。可以在下面评论区评论，也可以邮件至 jame_xhs@163.com
 
 bottom_text: ©2016-2019 jame_xhs
 # 自定义页面最下方的站点版权信息
