--- a/jxhsjxhs.github.io/themes/3-hexo/_config.yml
+++ b/jxhsjxhs.github.io/themes/3-hexo/_config.yml
@@ -111,8 +111,8 @@ article_list:
 # 文章列表背景图
 article_bg_img:
   on: true # 是否开启
-  src: https://i.loli.net/2019/07/22/5d3521411f3f169375.png
-  opacity: 0.3 # 背景图透明度，范围 0 ～ 1
+  src: https://i.loli.net/2019/10/16/eT61529qZYzsEDC.jpg
+  opacity: 0.6 # 背景图透明度，范围 0 ～ 1
 
 # 列表样式
 list: thread
