--- a/jxhsjxhs.github.io/_config.yml
+++ b/jxhsjxhs.github.io/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: jame_xhs's blog
-subtitle: "没有神的光环，你我生而平凡"
+subtitle: "talk is cheap，show me the code！"
 description: ""
 keywords:
 author: jame_xhs
