--- a/jxhsjxhs.github.io/_config.yml
+++ b/jxhsjxhs.github.io/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: jame_xhs's blog
-subtitle: "talk is cheap，show me the code！"
+subtitle: "no BB，show me the code."
 description: ""
 keywords:
 author: jame_xhs
