--- a/jxhsjxhs.github.io/package.json
+++ b/jxhsjxhs.github.io/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.0.0"
+    "version": "4.2.1"
   },
   "dependencies": {
     "hexo": "^4.2.1",
@@ -19,6 +19,7 @@
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-json-content": "^4.1.6",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
