--- a/jxhsjxhs.github.io/themes/hexo-theme-yilia/_config.yml
+++ b/jxhsjxhs.github.io/themes/hexo-theme-yilia/_config.yml
@@ -12,8 +12,8 @@ subnav:
   # weibo: "#"
   # rss: "#"
   # zhihu: "#"
-  qq: "360792760"
-  weixin: "jame_xhs"
+  qq: "qq"
+  weixin: "wechat"
   #jianshu: "#"
   #douban: "#"
   #segmentfault: "#"
