--- a/jxhsjxhs.github.io/themes/fluid/_config.yml
+++ b/jxhsjxhs.github.io/themes/fluid/_config.yml
@@ -300,6 +300,15 @@ navbar:
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
+    - {
+      key: 'code',
+      icon: 'iconfont icon-books',
+      submenu: [
+        { key: 'openresty', link: '/openresty/' },
+        { key: 'golang', link: '/golang/' },
+        { key: '架构', link: '/arch/' },
+      ]
+  }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
