--- a/jxhsjxhs.github.io/themes/fluid/_config.yml
+++ b/jxhsjxhs.github.io/themes/fluid/_config.yml
@@ -294,7 +294,7 @@ navbar:
   # Navigation bar menu. `key` is used to associate languages/*.yml. If there is no association, the value of `key` itself will be displayed; if `icon` is a css class, it can be omitted; adding `name` can force the display of the specified name
   menu:
     - { key: "home", link: "/", icon: "iconfont icon-home-fill" }
-    - { key: "理财", link: "/financial/", icon: "iconfont icon-slack-fill" }
+    - { key: "奇怪的知识", link: "/financial/", icon: "iconfont icon-slack-fill" }
     - { key: "archive", link: "/archives/", icon: "iconfont icon-archive-fill" }
     - { key: "category", link: "/categories/", icon: "iconfont icon-category-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
