--- a/jxhsjxhs.github.io/themes/fluid/_config.yml
+++ b/jxhsjxhs.github.io/themes/fluid/_config.yml
@@ -851,7 +851,7 @@ page404:
 #---------------------------
 links:
   enable: true
-  banner_img: /img/default.png
+  banner_img: https://tva1.sinaimg.cn/large/008i3skNgy1gvlkv83y1fj61aa0ta7g702.jpg
   banner_img_height: 60
   banner_mask_alpha: 0.3
   subtitle:
